# path-smoothing-trajectory-control

./: README.md
bot_bringup/: CMakeLists.txt  package.xml
bot_bringup/launch/: simulated_robot.launch.py
bot_bringup/params/: assignment.yaml
bot_bringup/rviz/: my_rviz.rviz
bot_controller/: CMakeLists.txt  package.xml
bot_controller/config/: bot_controllers.yaml
bot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
bot_controller/src/: twist_relay.cpp
bot_description/: CMakeLists.txt  package.xml
bot_description/launch/: display.launch.py  gazebo.launch.py
bot_description/urdf/: bot.urdf.xacro  bot_gazebo.xacro  bot_ros2_control.xacro
bot_description/worlds/: obstacle.world
bot_msgs/: CMakeLists.txt  package.xml
bot_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
bot_msgs/srv/: WaypointsPath.srv
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/include/obstacle_avoidance/: obstacle_avoidance.hpp
obstacle_avoidance/src/: obstacle_avoidance.cpp
path_smoother/: CMakeLists.txt  package.xml
path_smoother/src/: path_smoother.cpp
send_waypoint_client/: CMakeLists.txt  package.xml
send_waypoint_client/launch/: waypoints_client.launch.py
send_waypoint_client/params/: waypoints.yaml
send_waypoint_client/src/: waypoints_client.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/src/: trajectory_generator.cpp
trajectory_tracking_controller/: CMakeLists.txt  package.xml
trajectory_tracking_controller/src/: traj_controller.cpp
(+2 files in other folders)
